First DNSmasq Release for Loxberry 1.2.5

--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -1,12 +1,26 @@
 ;
 ; Language phrases EN
 ;
+
+[ADMIN]
 MY_NAME="DNSmasq"
-helplink="http://www.loxwiki.eu/display/LOXBERRY/DNSmasq"
 PLUGIN_DESCRIPTION="This Plugin provides a configuration interface for DNSmasq-Daemon.<br/>It enables the LoxBerry to be DHCP and DNS Server in the network."
-TXT_BTN_SHOW_LOG="Show logfile"
-TXT_BTN_DOWNLOAD_LOG="Download logfile"
-TXT_BTN_EMPTY_LOG="Empty logfile"
+ERR_EXIT="Admin page exited abnormally."
+OK_EXIT="Admin page exited normally."
+TO_DO="Requested function is"
+READING_CONFIG_FROM="Reading configuration file:"
+FUNCTION_CALLED="Function called:"
+LEASES_FOUND="leases found"
+OPEN_SOCKET="Opening socket"
+SOCKET_SEND="Sending data on socket:"
+SOCKET_RECEIVE="Reading data from socket:"
+SOCKET_FAIL="Error when using socket connection"
+SAVE_CONFIG="Saving configuration"
+NOSAVE_CONFIG="Test run. Do not write configuration"
+CONFIG_CHK_OK="Configuration check success"
+CONFIG_CHK_FAIL="Configuration check failed"
+SHOW_ADMINPAGE="Display admin page"
+
 TXT_LABEL_DNSMASQ_USE="Start DNSmasq:"
 TXT_LABEL_DNSMASQ_USE_ON="On"
 TXT_LABEL_DNSMASQ_USE_OFF="Off"
@@ -25,10 +39,6 @@ TXT_ERROR_ENTER_VALID_CONTROL_PORT="Please enter a valid Plugin-Backend-Server p
 TXT_LABEL_DNSMASQ_CONTROL_PORT="Plugin-Backend port:"
 TXT_SAVE_DIALOG_FAIL="Problem when saving"
 TXT_SAVE_DIALOG="Saving configuration and  start/stop services."
-TXT_EMPTY_LOG_DIALOG_TEXT="Sure, to start a new logfile?<br/><br/>The current logfile will be deleted."
-TXT_EMPTY_LOG_DIALOG_TITLE="Empty logfile?"
-TXT_EMPTY_LOG_DIALOG_PROGRESS="Waiting for authentication..."
-TXT_EMPTY_LOG_DIALOG_AUTHENTICATE="<b>Access denied!</b><small><br/><br/>Default-User: DNSmasq<br/>Default-Password: loxberry<br/></small><br/>Try again?"
 TXT_CHECK_CFG_DIALOG_TITLE="Check configuration files"
 TXT_CHECK_CFG_DIALOG_TITLE_SAVE="Check and save configuration files"
 TXT_CHECK_CFG_DIALOG_TEXT=" Please click to check the configuration files."
@@ -56,3 +66,61 @@ HLP_LABEL_DNSMASQ_HOSTS="The content of the hosts file used by the DNSmasq servi
 HLP_LABEL_DNSMASQ_CFG="The content of the configuration file used by the DNSmasq service. For further information click: "
 HLP_BTN_CHECK_CFG="To check the configuration file syntax. Files are not saved."
 HLP_BTN_SAVE="To save the configuration files. A syntax checking is performed before."
+
+
+[ERRORS]
+ERR_TITLE="An error occured :(..."
+ERR_BUTTON_BACK="Back"
+ERR_SUCCESS_TEMPLATE_NOT_READABLE="The success template file is not readable. We must abort here, sorry."
+ERR_ERROR_TEMPLATE_NOT_READABLE="The error template file is not readable. We must abort here, sorry."
+ERR_MAIN_TEMPLATE_NOT_READABLE="The main template file is not readable. We must abort here, sorry."
+ERR_READ_CONFIGFILE="The config file is not readable."
+ERR_CREATE_CONFIG_DIRECTORY="Problem when creating config directory"
+ERR_WRITE_CONFIG_FILE="Problem when writing config file"
+ERR_DEFAULT_CONFIG="Configuration file not found. Default config created. Please reload page."
+ERR_CONFIG_VALUE="Configuration value not found. Using default for missing value"
+ERR_INVALID_IP="Invalid IP detected"
+ERR_INVALID_HOSTNAME="Invalid HOSTNAME detected"
+ERR_IN_LINE="in line"
+
+[HELP]
+HELPLINK="http://www.loxwiki.eu/display/LOXBERRY/DNSmasq#EN"
+
+[LOGGING]
+ADMIN_CALL="Admin page requested"
+LOG_RESTARTED="Logfile restarted"
+LOG_AREA="Logging"
+LOGLEVEL="Loglevel:"
+LOGLEVEL7="Debug"
+LOGLEVEL6="Informational"
+LOGLEVEL5="OK"
+LOGLEVEL4="Warning"
+LOGLEVEL3="Error"
+LOGLEVEL2="Critical"
+LOGLEVEL1="Alert"
+LOGLEVEL0="Off"
+LOGLEVEL99="Unknown"
+LOGLEVEL-1="None"
+LOG_BUTTON_VIEW="Show logfile"
+LOG_BUTTON_DELETE="Restart logfile"
+LOG_BUTTON_DELETE_WORKING="Working..."
+LOG_BUTTON_DELETE_OK="Okay!"
+LOG_BUTTON_DELETE_FAIL="Failed!"
+
+
+[SERVER_CONTROL]
+START_CONTROL="DNSmasq Server Control Daemon started"
+SET_DIR_READ_CONF="Set directories + read Plugin config"
+ERR_EMPTY_CONF="Empty config file"
+ERR_EXIT="Server control daemon exited abnormally."
+OK_EXIT="Server control daemon exited normally."
+ERR_CONF_PARAM_MISSING="CONTROL_PORT=xxxxx Parameter missing in config file."
+INIT_BACKEND_SOCKET="Init backend and open socket on tcp port"
+ERR_CREATE_SOCKET="Cannot create socket"
+WAIT_CONNECT="DNSmasq control server waiting for client connection on port"
+STOP_REQUEST="DNSmasq control server got a STOP request"
+RESTART_REQUEST="DNSmasq control server got a RESTART request"
+STATUS_REQUEST="DNSmasq control server got a STATUS request"
+PORT_CHANGE_REQUEST="DNSmasq control server got a PORT CHANGE request"
+UNKNOWN_COMMAND="DNSmasq control server got an UNKNOWN request"
+CLIENT_CONN_CLOSED="Client connection closed normally."
