NL translation for Loxberry 1.2.5 plugin version

--- a/templates/lang/language_nl.ini
+++ b/templates/lang/language_nl.ini
@@ -1,6 +1,26 @@
+;
+; Language phrases NL
+;
+
 [ADMIN]
 MY_NAME="DNSmasq"
 PLUGIN_DESCRIPTION="Deze Plugin verzorgt een configuratie interface voor DNSmasq-Daemon.<br/>Het maakt het mogelijk om de LoxBerry als DHCP en DNS Server in het netwerk in te zetten."
+ERR_EXIT="Admin onverwachts beëindigd."
+OK_EXIT="Admin pagina normaal beëindigd."
+TO_DO="Gevraagde functie is"
+READING_CONFIG_FROM="Configuratie bestand inlezen:"
+FUNCTION_CALLED="Aangeroepen functie:"
+LEASES_FOUND="leases gevonden"
+OPEN_SOCKET="Socket openen"
+SOCKET_SEND="Data versturen over socket:"
+SOCKET_RECEIVE="Data lezen van socket:"
+SOCKET_FAIL="Fout bij het gebruik van een  socket verbinding"
+SAVE_CONFIG="Configuratie wordt opgeslagen"
+NOSAVE_CONFIG="Test poging. Sla de configuratie niet op"
+CONFIG_CHK_OK="Configuratie controle geslaagd"
+CONFIG_CHK_FAIL="Configuratie controle mislukt"
+SHOW_ADMINPAGE="Toon admin pagina"
+
 TXT_LABEL_DNSMASQ_USE="Start DNSmasq:"
 TXT_LABEL_DNSMASQ_USE_ON="Aan"
 TXT_LABEL_DNSMASQ_USE_OFF="Uit"
@@ -34,28 +54,41 @@ TXT_BTN_YES="Ja"
 TXT_BTN_NO="Nee"
 TXT_BTN_SAVE="Sla op"
 TXT_BTN_CANCEL="Terug naar het Hoofdmenu"
+HLP_INFO="Het doel van de DNSmasq plugin is het vereenvoudigen van het gebruik van uw LoxBerry als DNs en DHCP-Server. Het maakt het mogelijk om de dnsmasq service te starten, stoppen, monitoren en configureren."
+HLP_BTN_SHOW_LOG="Klik om het logbestand in een nieuw venster te openen. (Wordt niet automatisch ververst.)"
+HLP_BTN_DOWNLOAD_LOG="Klik om het logbestand te downloaden."
+HLP_BTN_EMPTY_LOG="Klik om een nieuw logbestand te openen. Het huidige logbestand zal worden gewist."
+HLP_DNSMASQ_CONTROL="Toont de status van de Backend (Control Server).<ul><li><b>Groen</b><br/>Alles ok</li><li><b>Geel</b><br/>Probleem met de dnsmasq service</li><li><b>Rood</b><br/>Probleem met de Backend-Server</li><li><b>Grijs</b><br/>dnsmasq service uitgeschakeld</li></ul>"
+HLP_LABEL_DNSMASQ_CONTROL_PORT="Instelling voor de Plugin-Backend TCP-Port uit een reeks van 50000 tot 59999."
+HLP_LABEL_DNSMASQ_USE="Om de dnsmasq service in en uit te schakelen. Om deze op te slaan dient u wijzigingen te maken."
+HLP_LABEL_DNSMASQ_LEASES="Toont huidige DNSmasq Leases (IP-Addressen geleverd door DHCP)."
+HLP_LABEL_DNSMASQ_HOSTS="De inhoud van het hosts bestand gebruikt door de DNSmasq service. De opmaak is standaard opmaak voor het Linux hosts bestand (/etc/hosts)"
+HLP_LABEL_DNSMASQ_CFG="De inhoud van het huidige configuratiebestand in gebruik bij de DNSmasq service. Voor meer informatie klik: "
+HLP_BTN_CHECK_CFG="Om de syntax van het configuratiebestand te controleren. Bestanden worden niet opgeslagen."
+HLP_BTN_SAVE="Om de configuratiebestanden op te slaan. Eerst wordt een syntax controle uitgevoerd."
+
 
 [ERRORS]
-ERR_TITLE="An error occured :(..."
-ERR_BUTTON_BACK="Back"
-ERR_SUCCESS_TEMPLATE_NOT_READABLE="The success template file is not readable. We must abort here, sorry."
-ERR_ERROR_TEMPLATE_NOT_READABLE="The error template file is not readable. We must abort here, sorry."
-ERR_MAIN_TEMPLATE_NOT_READABLE="The main template file is not readable. We must abort here, sorry."
-ERR_READ_CONFIGFILE="The config file is not readable."
-ERR_CREATE_CONFIG_DIRECTORY="Problem when creating config directory"
-ERR_WRITE_CONFIG_FILE="Problem when writing config file"
-ERR_DEFAULT_CONFIG="Configuration file not found. Default config created. Please reload page."
-ERR_CONFIG_VALUE="Configuration value not found. Using default for missing value"
-ERR_INVALID_IP="Invalid IP detected"
-ERR_INVALID_HOSTNAME="Invalid HOSTNAME detected"
+ERR_TITLE="Er is een fout opgetreden :(..."
+ERR_BUTTON_BACK="Terug"
+ERR_SUCCESS_TEMPLATE_NOT_READABLE="Het success template bestand is onleesbaar. Sorry, we moeten hier afbreken."
+ERR_ERROR_TEMPLATE_NOT_READABLE="Het error template bestand is onleesbaar. Sorry, we moeten hier afbreken."
+ERR_MAIN_TEMPLATE_NOT_READABLE="Het main template bestand is onleesbaar. Sorry, we moeten hier afbreken."
+ERR_READ_CONFIGFILE="Het configuratie bestand is onleesbaar."
+ERR_CREATE_CONFIG_DIRECTORY="Probleem bij het maken van de configuratiemap"
+ERR_WRITE_CONFIG_FILE="Probleem bij het schrijven van het configuratiebestand"
+ERR_DEFAULT_CONFIG="Configuratie bestand niet gevonden. Standaardconfiguratie aangemaakt. Herlaad deze pagina."
+ERR_CONFIG_VALUE="Configuratie waarde niet gevonden. We vullen de standaardwaarde in voor de ontbrekende waarde"
+ERR_INVALID_IP="Verkeerd opgemaakt IP-adres detecteerd"
+ERR_INVALID_HOSTNAME="Verkeerde HOSTNAME gedetecteerd"
 ERR_IN_LINE="in line"
 
 [HELP]
 HELPLINK="http://www.loxwiki.eu/display/LOXBERRY/DNSmasq#NL"
 
 [LOGGING]
-ADMIN_CALL="Admin page requested"
-LOG_RESTARTED="Logfile restarted"
+ADMIN_CALL="Admin pagina opgevraagd"
+LOG_RESTARTED="Logbestand herstart"
 LOG_AREA="Logging"
 LOGLEVEL="Loglevel:"
 LOGLEVEL7="Debug"
@@ -70,23 +103,24 @@ LOGLEVEL99="Unknown"
 LOGLEVEL-1="None"
 LOG_BUTTON_VIEW="Toon logbestand"
 LOG_BUTTON_DELETE="Leeg logbestand"
-LOG_BUTTON_DELETE_WORKING="Working..."
-LOG_BUTTON_DELETE_OK="Okay!"
-LOG_BUTTON_DELETE_FAIL="Failed!"
+LOG_BUTTON_DELETE_WORKING="Aan het werk..."
+LOG_BUTTON_DELETE_OK="Ok!"
+LOG_BUTTON_DELETE_FAIL="Mislukt!"
+
 
 [SERVER_CONTROL]
-START_CONTROL="DNSmasq Server Control Daemon started"
-SET_DIR_READ_CONF="Set directories + read Plugin config"
-ERR_EMPTY_CONF="Empty config file"
-ERR_EXIT="Server control daemon exited abnormally."
-OK_EXIT="Server control daemon exited normally."
-ERR_CONF_PARAM_MISSING="CONTROL_PORT=xxxxx Parameter missing in config file."
-INIT_BACKEND_SOCKET="Init backend and open socket on tcp port"
-ERR_CREATE_SOCKET="Cannot create socket"
-WAIT_CONNECT="DNSmasq control server waiting for client connection on port"
-STOP_REQUEST="DNSmasq control server got a STOP request"
-RESTART_REQUEST="DNSmasq control server got a RESTART request"
-STATUS_REQUEST="DNSmasq control server got a STATUS request"
-PORT_CHANGE_REQUEST="DNSmasq control server got a PORT CHANGE request"
-UNKNOWN_COMMAND="DNSmasq control server got an UNKNOWN request"
-CLIENT_CONN_CLOSED="Client connection closed normally."
+START_CONTROL="DNSmasq Server Control Daemon is gestart"
+SET_DIR_READ_CONF="Configureer directories + lees Plugin configuratie"
+ERR_EMPTY_CONF="Leeg configuratie bestand"
+ERR_EXIT="Server control daemon onverwachts beëindigd."
+OK_EXIT="Server control daemon normaal geëindigd."
+ERR_CONF_PARAM_MISSING="CONTROL_PORT=xxxxx Parameter ontbreekt in configuratiebestand."
+INIT_BACKEND_SOCKET="Initieer backend en open socket op tcp poort"
+ERR_CREATE_SOCKET="Kan socket niet aanmaken"
+WAIT_CONNECT="DNSmasq control server wacht op client verbinding op poort"
+STOP_REQUEST="DNSmasq control server heeft een STOP verzoek ontvangen"
+RESTART_REQUEST="DNSmasq control server heeft een HERSTART verzoek ontvangen"
+STATUS_REQUEST="DNSmasq control server heeft een STATUS verzoek ontvangen"
+PORT_CHANGE_REQUEST="DNSmasq control server heeft een POORT WIJZIGINGS verzoek ontvangen"
+UNKNOWN_COMMAND="DNSmasq control server heeft een UNKNOWN verzoek ontvangen"
+CLIENT_CONN_CLOSED="Client verbinding normaal afgesloten."
