--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -1,6 +1,24 @@
 ;
 ; Language phrases EN
 ;
+[SERVER_CONTROL]
+START_CONTROL="DNSmasq Server Control Daemon started"
+SET_DIR_READ_CONF="Set directories + read Plugin config"
+ERR_EMPTY_CONF="Empty config file"
+ERR_EXIT="Server control daemon exited abnormally."
+LOGLEVEL_CHANGED="The loglevel has been changed since the Server Control Deamon was started. Restarting Server Control Deamon. "
+OK_EXIT="Server control daemon exited normally."
+ERR_CONF_PARAM_MISSING="CONTROL_PORT=xxxxx Parameter missing in config file."
+INIT_BACKEND_SOCKET="Init backend and open socket on tcp port"
+ERR_CREATE_SOCKET="Cannot create socket"
+WAIT_CONNECT="DNSmasq control server waiting for client connection on port"
+STOP_REQUEST="DNSmasq control server got a STOP request"
+RESTART_REQUEST="DNSmasq control server got a RESTART request"
+STATUS_REQUEST="DNSmasq control server got a STATUS request"
+PORT_CHANGE_REQUEST="DNSmasq control server got a PORT CHANGE request"
+UNKNOWN_COMMAND="DNSmasq control server got an UNKNOWN request"
+CLIENT_CONN_CLOSED="Client connection closed normally."
+
 
 [ADMIN]
 MY_NAME="DNSmasq"
@@ -54,18 +72,6 @@ TXT_BTN_YES="Yes"
 TXT_BTN_NO="No"
 TXT_BTN_SAVE="Save"
 TXT_BTN_CANCEL="Back to Main Menu"
-HLP_INFO="The DNSmasq plugin purpose is, to simplify usage of your LoxBerry as DNS and DHCP-Server. It makes it possible to start, stop, observe and configure the dnsmasq service."
-HLP_BTN_SHOW_LOG="Click, to open the logfile in a new window. (No automatic refresh.)"
-HLP_BTN_DOWNLOAD_LOG="Click, to download the logfile."
-HLP_BTN_EMPTY_LOG="Click, to start a new logfile. The current logfile will be deleted."
-HLP_DNSMASQ_CONTROL="Shows the Backend (Control Server) state.<ul><li><b>Green</b><br/>Everything ok</li><li><b>Yellow</b><br/>Problem with dnsmasq service</li><li><b>Red</b><br/>Problem with Backend-Server</li><li><b>Gray</b><br/>dnsmasq service disabled</li></ul>"
-HLP_LABEL_DNSMASQ_CONTROL_PORT="Setting for the Plugin-Backend TCP-Port in a range from 50000 to 59999."
-HLP_LABEL_DNSMASQ_USE="To enable or disable the dnsmasq service. Changes will require to save the configuration."
-HLP_LABEL_DNSMASQ_LEASES="Shows current DNSmasq Leases (IP-Addresses provided by DHCP)."
-HLP_LABEL_DNSMASQ_HOSTS="The content of the hosts file used by the DNSmasq service. The format is the default format for the Linux hosts file (/etc/hosts)"
-HLP_LABEL_DNSMASQ_CFG="The content of the configuration file used by the DNSmasq service. For further information click: "
-HLP_BTN_CHECK_CFG="To check the configuration file syntax. Files are not saved."
-HLP_BTN_SAVE="To save the configuration files. A syntax checking is performed before."
 
 
 [ERRORS]
@@ -107,20 +113,3 @@ LOG_BUTTON_DELETE_WORKING="Working..."
 LOG_BUTTON_DELETE_OK="Okay!"
 LOG_BUTTON_DELETE_FAIL="Failed!"
 
-
-[SERVER_CONTROL]
-START_CONTROL="DNSmasq Server Control Daemon started"
-SET_DIR_READ_CONF="Set directories + read Plugin config"
-ERR_EMPTY_CONF="Empty config file"
-ERR_EXIT="Server control daemon exited abnormally."
-OK_EXIT="Server control daemon exited normally."
-ERR_CONF_PARAM_MISSING="CONTROL_PORT=xxxxx Parameter missing in config file."
-INIT_BACKEND_SOCKET="Init backend and open socket on tcp port"
-ERR_CREATE_SOCKET="Cannot create socket"
-WAIT_CONNECT="DNSmasq control server waiting for client connection on port"
-STOP_REQUEST="DNSmasq control server got a STOP request"
-RESTART_REQUEST="DNSmasq control server got a RESTART request"
-STATUS_REQUEST="DNSmasq control server got a STATUS request"
-PORT_CHANGE_REQUEST="DNSmasq control server got a PORT CHANGE request"
-UNKNOWN_COMMAND="DNSmasq control server got an UNKNOWN request"
-CLIENT_CONN_CLOSED="Client connection closed normally."
