--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -3,7 +3,7 @@
 ;
 [SERVER_CONTROL]
 START_CONTROL="DNSmasq Server Control Daemon started"
-SET_DIR_READ_CONF="Set directories + read Plugin config"
+SET_DIR_READ_CONF="Set directories and read Plugin config"
 ERR_EMPTY_CONF="Empty config file"
 ERR_EXIT="Server control daemon exited abnormally."
 LOGLEVEL_CHANGED="The loglevel has been changed since the Server Control Deamon was started. Restarting Server Control Deamon. "
