Updated translation with latest changes

--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -6,7 +6,7 @@ START_CONTROL="DNSmasq Server Control Daemon started"
 SET_DIR_READ_CONF="Set directories and read Plugin config"
 ERR_EMPTY_CONF="Empty config file"
 ERR_EXIT="Server control daemon exited abnormally."
-LOGLEVEL_CHANGED="The loglevel has been changed since the Server Control Deamon was started. Restarting Server Control Deamon. "
+LOGLEVEL_CHANGED="The loglevel has been changed since the Server Control Daemon was started. Restarting Server Control Deamon. "
 OK_EXIT="Server control daemon exited normally."
 ERR_CONF_PARAM_MISSING="CONTROL_PORT=xxxxx Parameter missing in config file."
 INIT_BACKEND_SOCKET="Init backend and open socket on tcp port"
@@ -112,4 +112,3 @@ LOG_BUTTON_DELETE="Restart logfile"
 LOG_BUTTON_DELETE_WORKING="Working..."
 LOG_BUTTON_DELETE_OK="Okay!"
 LOG_BUTTON_DELETE_FAIL="Failed!"
-
