--- a/templates/lang/language_nl.ini
+++ b/templates/lang/language_nl.ini
@@ -1,6 +1,24 @@
 ;
 ; Language phrases NL
 ;
+[SERVER_CONTROL]
+START_CONTROL="DNSmasq Server Control Daemon is gestart"
+SET_DIR_READ_CONF="Configureer directories en lees de Plugin configuratie"
+ERR_EMPTY_CONF="Leeg configuratie bestand"
+ERR_EXIT="Server control daemon onverwachts beëindigd."
+LOGLEVEL_CHANGED="Het Logniveau is gewijzigd sinds de Server Control Daemon was started. Herstarten van de Server Control Deamon. "
+OK_EXIT="Server control daemon normaal geëindigd."
+ERR_CONF_PARAM_MISSING="CONTROL_PORT=xxxxx Parameter ontbreekt in configuratiebestand."
+INIT_BACKEND_SOCKET="Initieer backend en open socket op tcp poort"
+ERR_CREATE_SOCKET="Kan socket niet aanmaken"
+WAIT_CONNECT="DNSmasq control server wacht op client verbinding op poort"
+STOP_REQUEST="DNSmasq control server heeft een STOP verzoek ontvangen"
+RESTART_REQUEST="DNSmasq control server heeft een HERSTART verzoek ontvangen"
+STATUS_REQUEST="DNSmasq control server heeft een STATUS verzoek ontvangen"
+PORT_CHANGE_REQUEST="DNSmasq control server heeft een POORT WIJZIGINGS verzoek ontvangen"
+UNKNOWN_COMMAND="DNSmasq control server heeft een UNKNOWN verzoek ontvangen"
+CLIENT_CONN_CLOSED="Client verbinding normaal afgesloten."
+
 
 [ADMIN]
 MY_NAME="DNSmasq"
@@ -54,18 +72,6 @@ TXT_BTN_YES="Ja"
 TXT_BTN_NO="Nee"
 TXT_BTN_SAVE="Sla op"
 TXT_BTN_CANCEL="Terug naar het Hoofdmenu"
-HLP_INFO="Het doel van de DNSmasq plugin is het vereenvoudigen van het gebruik van uw LoxBerry als DNs en DHCP-Server. Het maakt het mogelijk om de dnsmasq service te starten, stoppen, monitoren en configureren."
-HLP_BTN_SHOW_LOG="Klik om het logbestand in een nieuw venster te openen. (Wordt niet automatisch ververst.)"
-HLP_BTN_DOWNLOAD_LOG="Klik om het logbestand te downloaden."
-HLP_BTN_EMPTY_LOG="Klik om een nieuw logbestand te openen. Het huidige logbestand zal worden gewist."
-HLP_DNSMASQ_CONTROL="Toont de status van de Backend (Control Server).<ul><li><b>Groen</b><br/>Alles ok</li><li><b>Geel</b><br/>Probleem met de dnsmasq service</li><li><b>Rood</b><br/>Probleem met de Backend-Server</li><li><b>Grijs</b><br/>dnsmasq service uitgeschakeld</li></ul>"
-HLP_LABEL_DNSMASQ_CONTROL_PORT="Instelling voor de Plugin-Backend TCP-Port uit een reeks van 50000 tot 59999."
-HLP_LABEL_DNSMASQ_USE="Om de dnsmasq service in en uit te schakelen. Om deze op te slaan dient u wijzigingen te maken."
-HLP_LABEL_DNSMASQ_LEASES="Toont huidige DNSmasq Leases (IP-Addressen geleverd door DHCP)."
-HLP_LABEL_DNSMASQ_HOSTS="De inhoud van het hosts bestand gebruikt door de DNSmasq service. De opmaak is standaard opmaak voor het Linux hosts bestand (/etc/hosts)"
-HLP_LABEL_DNSMASQ_CFG="De inhoud van het huidige configuratiebestand in gebruik bij de DNSmasq service. Voor meer informatie klik: "
-HLP_BTN_CHECK_CFG="Om de syntax van het configuratiebestand te controleren. Bestanden worden niet opgeslagen."
-HLP_BTN_SAVE="Om de configuratiebestanden op te slaan. Eerst wordt een syntax controle uitgevoerd."
 
 
 [ERRORS]
@@ -81,7 +87,7 @@ ERR_DEFAULT_CONFIG="Configuratie bestand niet gevonden. Standaardconfiguratie aa
 ERR_CONFIG_VALUE="Configuratie waarde niet gevonden. We vullen de standaardwaarde in voor de ontbrekende waarde"
 ERR_INVALID_IP="Verkeerd opgemaakt IP-adres detecteerd"
 ERR_INVALID_HOSTNAME="Verkeerde HOSTNAME gedetecteerd"
-ERR_IN_LINE="in line"
+ERR_IN_LINE="in regel"
 
 [HELP]
 HELPLINK="http://www.loxwiki.eu/display/LOXBERRY/DNSmasq#NL"
@@ -106,21 +112,3 @@ LOG_BUTTON_DELETE="Leeg logbestand"
 LOG_BUTTON_DELETE_WORKING="Aan het werk..."
 LOG_BUTTON_DELETE_OK="Ok!"
 LOG_BUTTON_DELETE_FAIL="Mislukt!"
-
-
-[SERVER_CONTROL]
-START_CONTROL="DNSmasq Server Control Daemon is gestart"
-SET_DIR_READ_CONF="Configureer directories + lees Plugin configuratie"
-ERR_EMPTY_CONF="Leeg configuratie bestand"
-ERR_EXIT="Server control daemon onverwachts beëindigd."
-OK_EXIT="Server control daemon normaal geëindigd."
-ERR_CONF_PARAM_MISSING="CONTROL_PORT=xxxxx Parameter ontbreekt in configuratiebestand."
-INIT_BACKEND_SOCKET="Initieer backend en open socket op tcp poort"
-ERR_CREATE_SOCKET="Kan socket niet aanmaken"
-WAIT_CONNECT="DNSmasq control server wacht op client verbinding op poort"
-STOP_REQUEST="DNSmasq control server heeft een STOP verzoek ontvangen"
-RESTART_REQUEST="DNSmasq control server heeft een HERSTART verzoek ontvangen"
-STATUS_REQUEST="DNSmasq control server heeft een STATUS verzoek ontvangen"
-PORT_CHANGE_REQUEST="DNSmasq control server heeft een POORT WIJZIGINGS verzoek ontvangen"
-UNKNOWN_COMMAND="DNSmasq control server heeft een UNKNOWN verzoek ontvangen"
-CLIENT_CONN_CLOSED="Client verbinding normaal afgesloten."
