Fixed minor translation error

--- a/templates/lang/language_nl.ini
+++ b/templates/lang/language_nl.ini
@@ -1,13 +1,11 @@
-;
-; Language phrases NL
-;
+
 [SERVER_CONTROL]
 START_CONTROL="DNSmasq Server Control Daemon is gestart"
-SET_DIR_READ_CONF="Configureer directories en lees de Plugin configuratie"
+SET_DIR_READ_CONF="Configureer directories + lees Plugin configuratie"
 ERR_EMPTY_CONF="Leeg configuratie bestand"
-ERR_EXIT="Server control daemon onverwachts beëindigd."
-LOGLEVEL_CHANGED="Het Logniveau is gewijzigd sinds de Server Control Daemon was started. Herstarten van de Server Control Deamon. "
-OK_EXIT="Server control daemon normaal geëindigd."
+ERR_EXIT="Server Control Daemon onverwachts beëindigd."
+LOGLEVEL_CHANGED="Het Logniveau is aangepast sinds de Server Control Daemon is gestart. Aan het herstarten van de Server Control Daemon."
+OK_EXIT="Server Control Daemon normaal geëindigd."
 ERR_CONF_PARAM_MISSING="CONTROL_PORT=xxxxx Parameter ontbreekt in configuratiebestand."
 INIT_BACKEND_SOCKET="Initieer backend en open socket op tcp poort"
 ERR_CREATE_SOCKET="Kan socket niet aanmaken"
@@ -18,7 +16,6 @@ STATUS_REQUEST="DNSmasq control server heeft een STATUS verzoek ontvangen"
 PORT_CHANGE_REQUEST="DNSmasq control server heeft een POORT WIJZIGINGS verzoek ontvangen"
 UNKNOWN_COMMAND="DNSmasq control server heeft een UNKNOWN verzoek ontvangen"
 CLIENT_CONN_CLOSED="Client verbinding normaal afgesloten."
-
 
 [ADMIN]
 MY_NAME="DNSmasq"
@@ -38,7 +35,6 @@ NOSAVE_CONFIG="Test poging. Sla de configuratie niet op"
 CONFIG_CHK_OK="Configuratie controle geslaagd"
 CONFIG_CHK_FAIL="Configuratie controle mislukt"
 SHOW_ADMINPAGE="Toon admin pagina"
-
 TXT_LABEL_DNSMASQ_USE="Start DNSmasq:"
 TXT_LABEL_DNSMASQ_USE_ON="Aan"
 TXT_LABEL_DNSMASQ_USE_OFF="Uit"
@@ -72,7 +68,6 @@ TXT_BTN_YES="Ja"
 TXT_BTN_NO="Nee"
 TXT_BTN_SAVE="Sla op"
 TXT_BTN_CANCEL="Terug naar het Hoofdmenu"
-
 
 [ERRORS]
 ERR_TITLE="Er is een fout opgetreden :(..."
