--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -75,7 +75,7 @@ TXT_BTN_CANCEL="Back to Main Menu"
 
 
 [ERRORS]
-ERR_TITLE="An error occured :(..."
+ERR_TITLE="An error occured"
 ERR_BUTTON_BACK="Back"
 ERR_SUCCESS_TEMPLATE_NOT_READABLE="The success template file is not readable. We must abort here, sorry."
 ERR_ERROR_TEMPLATE_NOT_READABLE="The error template file is not readable. We must abort here, sorry."
