Sort leases by IP

--- a/templates/lang/language_de.ini
+++ b/templates/lang/language_de.ini
@@ -20,6 +20,9 @@ SHOW_ADMINPAGE="Zeige Admin-Seite"
 TXT_LABEL_DNSMASQ_USE="DNSmasq starten:"
 TXT_LABEL_DNSMASQ_USE_ON="Ein"
 TXT_LABEL_DNSMASQ_USE_OFF="Aus"
+TXT_LABEL_SORT_BY_IP="Nach IP sortieren:"
+TXT_LABEL_SORT_BY_IP_ON="Ja"
+TXT_LABEL_SORT_BY_IP_OFF="Nein"
 TXT_LABEL_DNSMASQ_LEASES="Laut DHCP-Datenbank vergebene Adressen"
 TXT_ERROR_GET_LEASES="Konnte DHCP-Datenbank nicht abfragen."
 TXT_ERROR_NO_LEASES="Keine Adressen vergeben."
