--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -42,6 +42,9 @@ SHOW_ADMINPAGE="Display admin page"
 TXT_LABEL_DNSMASQ_USE="Start DNSmasq:"
 TXT_LABEL_DNSMASQ_USE_ON="On"
 TXT_LABEL_DNSMASQ_USE_OFF="Off"
+TXT_LABEL_SORT_BY_IP="Sort by IP:"
+TXT_LABEL_SORT_BY_IP_ON="Yes"
+TXT_LABEL_SORT_BY_IP_OFF="No"
 TXT_LABEL_DNSMASQ_LEASES="Leases in DHCP-Database"
 TXT_ERROR_GET_LEASES="Could not query DHCP-Database."
 TXT_ERROR_NO_LEASES="Currently no leases found."
