--- a/templates/lang/language_nl.ini
+++ b/templates/lang/language_nl.ini
@@ -4,7 +4,7 @@ START_CONTROL="DNSmasq Server Control Daemon is gestart"
 SET_DIR_READ_CONF="Configureer directories + lees Plugin configuratie"
 ERR_EMPTY_CONF="Leeg configuratie bestand"
 ERR_EXIT="Server Control Daemon onverwachts beëindigd."
-LOGLEVEL_CHANGED="Het Logniveau is aangepast sinds de Server Control Daemon is gestart. Aan het herstarten van de Server Control Daemon."
+LOGLEVEL_CHANGED="Het Logniveau is aangepast sinds de Server Control Daemon is gestart. De Server Control Daemon wordt herstart."
 OK_EXIT="Server Control Daemon normaal geëindigd."
 ERR_CONF_PARAM_MISSING="CONTROL_PORT=xxxxx Parameter ontbreekt in configuratiebestand."
 INIT_BACKEND_SOCKET="Initieer backend en open socket op tcp poort"
@@ -38,7 +38,7 @@ SHOW_ADMINPAGE="Toon admin pagina"
 TXT_LABEL_DNSMASQ_USE="Start DNSmasq:"
 TXT_LABEL_DNSMASQ_USE_ON="Aan"
 TXT_LABEL_DNSMASQ_USE_OFF="Uit"
-TXT_LABEL_SORT_BY_IP="Sorteren op IP:"
+TXT_LABEL_SORT_BY_IP="Sorteer op IP:"
 TXT_LABEL_SORT_BY_IP_ON="Ja"
 TXT_LABEL_SORT_BY_IP_OFF="Nee"
 TXT_LABEL_DNSMASQ_LEASES="Leases in de DHCP-Database"
